Wed Mar 30 13:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ciao/ComponentsC.h:
	* DAnCE/ciao/ComponentsC.h:
          Fixed include of Typecode.h to TypeCode.h

Wed Mar 30 13:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* DAnCE/Config_Handlers/DataType_Handler.cpp:
	* DAnCE/Old_Config_Handlers/DT_Handler.cpp:
          Fixed include of Typecode.h to TypeCode.h

Thu Mar 24 17:02:34  Will Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/Basic_Deployment_Data.hpp
	* DAnCE/Config_Handlers/Deployment.hpp
	* DAnCE/Config_Handlers/ccd.hpp
	* DAnCE/Config_Handlers/cdd.hpp
	* DAnCE/Config_Handlers/cdp.hpp
	* DAnCE/Config_Handlers/cid.hpp
	* DAnCE/Config_Handlers/cpd.hpp
	* DAnCE/Config_Handlers/iad.hpp
	* DAnCE/Config_Handlers/pcd.hpp
	* DAnCE/Config_Handlers/toplevel.hpp
	* DAnCE/Config_Handlers/XSCRT/XML.hpp
	* DAnCE/Config_Handlers/vc6-4786.h

	Finally beat a big warning problem in VC6.

Thu Mar 24 15:19:21 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/XSCRT/Elements.hpp
	* DAnCE/Config_Handlers/XSCRT/XML.hpp

	Moved a pragma disable from Elements.hpp to XML.hpp to
	attempt to silence more warnings in VC6.

Thu Mar 24 14:52:03 2005  Will Otte <wotte@dre.vanderilt.edu>

	* DAnCE/Config_Handlers/Any_Handler.cpp

	Fixed a compile error for 64bit arch that resulted from
	the earlier VC6 fix.

Thu Mar 24 09:21:59 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/examples/Swapping/Sender/Sender.mpc:

          Added the "after" clause in the MPC file to fix a
          linker error.

Thu Mar 24 08:46:07 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ExecImplSourceGenerator.cpp:
        * CIDLC/Literals.cpp:
        * CIDLC/Literals.hpp:
        * CIDLC/ServantSourceGenerator.cpp:
        * CIDLC/TypeNameEmitter.cpp:

          - Added generation of ACE_UNUSED_ARG macros for local variables in
            the get_registered_consumers() method for upgradeable components,