@@ -1,0 +1,22 @@
+/* $Id$
+ * This code was generated by the XML Schema Compiler.
+ *
+ * Changes made to this code will most likely be overwritten
+ * when the handlers are recompiled.
+ * 
+ * If you find errors or feel that there are bugfixes to be made,
+ * please contact the current XSC maintainer:
+ *             Will Otte <wotte@dre.vanderbilt.edu>
+ */
+
+
+// Fixes the VC6 warning 4786.
+#include "vc6-4786.h"
+ 
+// Fix for Borland compilers, which seem to have a broken
+// <string> include.
+#ifdef __BORLANDC__
+# include <string.h>
+#endif
+
+#include "Config_Handlers_Export.h"
